Fix contrasting button color

--- a/components/button.scss
+++ b/components/button.scss
@@ -11,9 +11,11 @@
 	letter-spacing: .05rem;
 	font-weight: bold;
 	background-color: transparent;
-	border: 1px solid $color-neutral-light;
+	color: $color-primary;
+	border: 1px solid $color-primary;
 	outline: none;
 	cursor: pointer;
+	transition: all .2s;
 
 	&:last-child {
 		margin-right: 0;
@@ -32,7 +34,7 @@
 .Button--primary {
 	background-color: $color-primary;
 	border-color: $color-primary;
-	color: contrast($color-primary);
+	color: $color-black;
 
 	&:hover, &:focus {
 		background-color: $color-primary-light;
@@ -42,7 +44,7 @@
 .Button--secondary {
 	background-color: $color-secondary;
 	border-color: $color-secondary;
-	color: contrast($color-secondary);
+	color: $color-black;
 
 	&:hover, &:focus {
 		background-color: $color-secondary-light;
@@ -52,7 +54,7 @@
 .Button--neutral {
 	background-color: $color-neutral;
 	border-color: $color-neutral;
-	color: contrast($color-neutral);
+	color: $color-black;
 
 	&:hover, &:focus {
 		background-color: $color-neutral-light;
